--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "comfyui-af-find-nodes"
 description = "A ComfyUI extension that allows you to find and locate nodes by their ID, title, pack, or type in complex workflows."
-version = "0.0.8"
+version = "0.0.9"
 license = {file = "LICENSE"}
 dependencies = []
 
@@ -11,4 +11,4 @@ Repository = "https://github.com/alFrame/ComfyUI-AF-Find-Nodes"
 [tool.comfy]
 PublisherId = "alframe"
 DisplayName = "ComfyUI AF - Find Nodes"
-Icon = "https://raw.githubusercontent.com/alFrame/ComfyUI-AF-Find-Nodes/main/Docs/icon.png"
+Icon = "https://fullframestudios.ch/ComfyUI-Icon/icon.png"
