--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,4 @@ Repository = "https://github.com/alFrame/ComfyUI-AF-Find-Nodes"
 [tool.comfy]
 PublisherId = "alframe"
 DisplayName = "ComfyUI AF - Find Nodes"
-Icon = "https://fullframestudios.ch/ComfyUI-Icon/icon.png"
+Icon = "https://raw.githubusercontent.com/alFrame/ComfyUI-AF-Find-Nodes/main/Docs/icon.png"
